# valkey-semantic-cache-demo

./: .gitignore  KIRO.md  Progress.md  README.md  SCRIPT.md  SemanticSupportDesk.md  deploy.sh
agents/: cache_constants.py  entrypoint.py  order_tracking_agent.py  pyproject.toml  support_agent.py
aws_logs/: lambda_execution.csv
backend/: tsconfig.json
backend/src/: index.ts
frontend/: index.html
infrastructure/: EC2_INDEX_SETUP.md  README.md
infrastructure/cdk/: cdk.context.json  package-lock.json
infrastructure/cdk/lib/: agentcore-stack.ts  elasticache-stack.ts
infrastructure/cloudformation/: agentcore-stack.yaml  cloudwatch-dashboard.yaml  elasticache-stack.yaml  ramp-up-simulator.yaml  vpc-endpoints-stack.yaml
infrastructure/elasticache_config/: create_vector_index.py
lambda/cache_management/: handler.py
lambda/demo_ui_api/: handler.py
lambda/ramp_up_simulator/: go.mod  go.sum  main.go
scripts/: deploy-elasticache.sh  deploy-vpc-endpoints.sh  teardown-elasticache.sh
