[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=1.0.6",
    "strands-agents>=1.17.0",
    "bedrock-agentcore-starter-toolkit", # for CLI commands, deployment automation, development workflow support
    "valkey-glide-sync>=2.1.1",
]
